fix pending page on small screens

--- a/default-dark/assets/css/main.css
+++ b/default-dark/assets/css/main.css
@@ -471,6 +471,7 @@ input.is-fullheight {
     left: 0.5rem;
     font-size: 0.75rem;
     font-weight: bold;
+    z-index: 2;
     text-shadow: 
         calc(-1 * var(--stroke-width)) calc(-1 * var(--stroke-width)) 0 var(--stroke-color),  
         calc(1 * var(--stroke-width)) calc(-1 * var(--stroke-width)) 0 var(--stroke-color),
@@ -480,6 +481,15 @@ input.is-fullheight {
         calc(1 * var(--stroke-width)) 0 var(--stroke-color),
         0 calc(-1 * var(--stroke-width)) var(--stroke-color),
         0 calc(1 * var(--stroke-width)) var(--stroke-color);
+}
+
+.is-box-title-right {
+    right: 0.5rem;
+}
+
+.is-box-title-center {
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 [aria-description] {
